--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Installing Surge 
         run:  npm install --global surge
       - name: Deploying Website using surge 
-        run : surge ./ myhelloworldapp.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run : surge ./ daniyal_bootcamp2020.surge.sh --token ${{ secrets.SURGE_TOKEN }}
         
        
